fix: es response deserialization of avg aggregation